fixed alignment on edit form

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -70,12 +70,13 @@ h6 {
 }
 
 .editForm {
-    align-content: center;
     text-align: center;
 }
 .editFormBox {
     height: 700px;
 }
+
+
 
 .img-centered {
     margin: 0 auto;
